# fea_toolkit

./: .gitignore  README.md  pyproject.toml
docs/: builder_reference.md  modal_analysis.md  pushover_analysis.md  rhino_export.md  viewer.md  workflow.md  xara_pushover_workflow.md
docs/references/: RCFrameGravity_v2.py  RCFramePushOver_v2.py
examples/: README.md  basic_usage.py  modal_rs_analysis.py  modal_usage.py  pushover_analysis.py  run_pumphouse.py  run_pumphouse_pushover.py  sample_model.py  static_analysis.py  test_io.py
fea_toolkit/: pyproject.toml
fea_toolkit/io/: s2k_parser.py
fea_toolkit/model/: sections.py
src/fea_toolkit/: __init__.py  _version.py  spectrum.py  utils.py
src/fea_toolkit/io/: helper.py  report.py  s2k_parser.py
src/fea_toolkit/mesh/: __init__.py  checks.py  remesh.py
src/fea_toolkit/model/: geometry.py  sap_data.py  sections.py  selection.py
src/fea_toolkit/opensees/: builder.py  recorder.py
src/fea_toolkit/plotting/: __init__.py  report.py  viewer.py  viz.py
src/fea_toolkit/plotting/renderers/: __init__.py  base.py  pyvista.py
src/fea_toolkit/rhino/: __init__.py  colors.py  colour_from_npz.py  geometry.py  geometry_v2.py  groups.py  importer.py  importer_v2.py  layers.py
tests/: README.md  test_dummy.py  test_edge_constraints.py  test_extracted.py  test_mesh.py  test_model.py  test_parser.py  test_recorder.py  test_rhino.py  test_workflows.py
tests/fixtures/: sample.json  sample.s2k  sample_2.s2k  sample_areas.json
typings/openseespy/opensees/: __init__.pyi
typings/opstool/: __init__.pyi
typings/opstool/post/: __init__.pyi
